{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 103,
  "lineage": "4b3b8fb6-55dd-d4ce-7050-1528072af997",
  "resources": [
    {
      "module": "module.prod_corp",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansible-slave",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e472ba40eb589f49",
            "arn": "arn:aws:ec2:us-east-1:385203254107:instance/i-0c93e4001c9ea76a9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c93e4001c9ea76a9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08043aba9a85e486d",
            "private_dns": "ip-172-31-46-229.ec2.internal",
            "private_ip": "172.31.46.229",
            "public_dns": "ec2-54-198-163-217.compute-1.amazonaws.com",
            "public_ip": "54.198.163.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01c2bb6655e75754c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-033288f374c19e483",
            "tags": {
              "Name": "ansible-slave"
            },
            "tags_all": {
              "Name": "ansible-slave"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a5dfb91f48019c4f"
            ]
          },
          "dependencies": [
            "module.prod_corp.aws_internet_gateway.igw-myVPC",
            "module.prod_corp.aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "module": "module.prod_corp",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-myVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385203254107:internet-gateway/igw-072e7a795f19f982e",
            "id": "igw-072e7a795f19f982e",
            "owner_id": "385203254107",
            "tags": {
              "Name": "igw-myVPC"
            },
            "tags_all": {
              "Name": "igw-myVPC"
            },
            "vpc_id": "vpc-02938dfc4b66adbb4"
          },
          "dependencies": [
            "module.prod_corp.aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "module": "module.prod_corp",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-myVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385203254107:route-table/rtb-04ab1941b34f8dce4",
            "id": "rtb-04ab1941b34f8dce4",
            "owner_id": "385203254107",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-072e7a795f19f982e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-myVPC"
            },
            "tags_all": {
              "Name": "rt-myVPC"
            },
            "timeouts": null,
            "vpc_id": "vpc-02938dfc4b66adbb4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_corp.aws_internet_gateway.igw-myVPC",
            "module.prod_corp.aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "module": "module.prod_corp",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e2c47a140810ffe",
            "route_table_id": "rtb-04ab1941b34f8dce4",
            "subnet_id": "subnet-040d51fedc6d0002b"
          },
          "dependencies": [
            "module.prod_corp.aws_route_table.rt-myVPC",
            "module.prod_corp.aws_subnet.subnet-myVPC"
          ]
        }
      ]
    },
    {
      "module": "module.prod_corp",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385203254107:security-group/sg-04dac32a431a6c08b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04dac32a431a6c08b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20220522202516877500000001",
            "name_prefix": "terraform-",
            "owner_id": "385203254107",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02938dfc4b66adbb4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_corp.aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "module": "module.prod_corp",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-myVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385203254107:subnet/subnet-040d51fedc6d0002b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.200.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040d51fedc6d0002b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "385203254107",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-myVPC"
            },
            "tags_all": {
              "Name": "subnet-myVPC"
            },
            "vpc_id": "vpc-02938dfc4b66adbb4"
          },
          "dependencies": [
            "module.prod_corp.aws_vpc.myVPC",
            "module.prod_corp.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.prod_corp",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385203254107:vpc/vpc-02938dfc4b66adbb4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.200.0.0/16",
            "default_network_acl_id": "acl-0030736662d5c8b64",
            "default_route_table_id": "rtb-0239456deeead83f5",
            "default_security_group_id": "sg-06bdeaa0a40f3c648",
            "dhcp_options_id": "dopt-0a97ff146eb37fa0e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02938dfc4b66adbb4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0239456deeead83f5",
            "owner_id": "385203254107",
            "tags": {
              "Name": "myVPC"
            },
            "tags_all": {
              "Name": "myVPC"
            }
          }
        }
      ]
    }
  ]
}